# git-actions-sandbox

./: CMakeLists.txt  Dockerfile  README.md  action.yml  entrypoint.sh  main.cpp
.github/workflows/: cmake-single-platform.yml  docker-workflow.yml  path1.yml  path2.yml
run_path_1/: README.md
run_path_2/: README.md
run_path_3/: README.md
test/: CMakeLists.txt  example.cpp
